# learnCplusplus

./: CMakeLists.txt  README.md
code/: AbstractCalculator.cpp  AbstractCalculator.h  Animal.cpp  Animal.h  Boss.cpp  Boss.h  Cat.cpp  Cat.h  Circle.cpp  Circle.h  Cube.cpp  Cube.h  Employee.cpp  Employee.h  Integer.cpp  Integer.h  Manager.cpp  Manager.h  MyArray.hpp  Person.cpp  Person.h  S.cpp  S.h  S.hpp  Speaker.cpp  Speaker.h  SpeechManager.cpp  SpeechManager.h  WorkManager.cpp  WorkManager.h  Worker.cpp  Worker.h  main.cpp
